src/components/HomeSection.css
.home-section {
  position: relative;
  height: calc(100vh + 56px);
  min-height: 500px;
  width: 100%;
  background: #e9ecef;
  text-align: center;
  overflow: hidden;
  display: flex;
  align-items: center;
}

.jumbotron {
  display: inline-block;
  vertical-align: middle;
  margin: 0 auto;
  width: 85%;
  padding-bottom: 30px;
  text-align: center;
  height: 50vh;
}

.jumbotron h1 {
  font-size: 80px;
}

.jumbotron h3 {
  font: 18px helvetica,serif;
  font-size: 20px;
  color: #a8a8a8;
  margin: 0 auto;
  width: 70%;
  text-shadow: 0 1px 2px rgba(0,0,0,.5);
}

.home-section svg:hover {
  fill: #11abb0;
}

.home-section a svg{
  height: 40px;
  width: 40px;
  transition: 1s;
}

.home-section .smoothscroll {
  position: absolute;
  bottom: 5vh;
  left: calc(50% - 20px);
}

